Try to increase maxPermSize